--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html, * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Poppins;
 }
 
 body { 
@@ -25,4 +26,9 @@ img {
     height: 50px;
     width: 50px;
   }
+}
+
+:root {
+  --green: #799283;
+  --grey: #F8F8F8;
 }
